<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Planner</string>
    
    <string name="no_connection">Please make sure that connection is active</string>
    <string name="login_to_get_started">Log in to get started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="authenticating">Authenticating</string>
    <string name="error">Error</string>
    <string name="classes">Classes</string>
    <string name="loading_classes">Loading classes</string>
    <string name="deleting_class">Deleting class</string>
    <string name="no_classes">You have no classes yet</string>
    <string name="add_class">Add class</string>
    <string name="class_name">Class name</string>
    <string name="enter_class_name">Please enter class name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tasks">Tasks</string>
    <string name="no_tasks">You have no tasks yet</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="information">Information</string>
    <string name="delete_class_confirmation">Deleting this item will remove all associated lesson plans you have created for that class</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="visit_website">Visit Our Website</string>
    <string name="review_app">Review This App</string>
    <string name="report_bug">Report A Bug</string>
    <string name="tell_friend">Tell A Friend</string>
    <string name="logout">Logout</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="activities">Activities</string>
    <string name="no_activities">You have no activities yet</string>
    <string name="activity">Activity</string>
    <string name="describe_activity">Please describe your activity</string>
    <string name="delete_activity_confirmation">Are you sure you want to delete this activity?</string>
    <string name="media_resources">Media Resources</string>
    <string name="no_resources">You have no resources yet</string>
    <string name="delete_resource_confirmation">Are you sure you want to delete this resource?</string>
    <string name="planned_homework">Planned Homework</string>
    <string name="no_homework">You have no homework yet</string>
    <string name="homework">Homework</string>
    <string name="describe_homework">Please describe your homework</string>
    <string name="delete_homework_confirmation">Are you sure you want to delete this homework?</string>
    <string name="preparation_tasks">Preparation Tasks</string>
    <string name="task">Task</string>
    <string name="describe_task">Please describe your task</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="overdue">Overdue</string>
    <string name="required_days">%1$s - %2$s</string>
    <string name="required_today">Required Today</string>
    <string name="add_resource_text">Please select resource type. Note: You can add files from multiple sources at once</string>
    <string name="dropbox">Dropbox</string>
    <string name="select_file">Please select file first</string>
    <string name="browse_dropbox">Browse Dropbox</string> 
    <string name="google_drive">Google Drive</string>
    <string name="browse_google_drive">Browse Google Drive</string>
    <string name="deleting_activity">Deleting activity</string>
    <string name="adding_activity">Adding activity</string>
    <string name="deleting_resource">Deleting resource</string>
    <string name="deleting_homework">Deleting homework</string>
    <string name="adding_homework">Adding homework</string>
    <string name="adding_task">Adding task</string>
    <string name="deleting_task">Deleting task</string>
    <string name="changing_task_status">Changing task status</string>
    <string name="web_page_link">Web page link</string>
    <string name="browse_web">Browse Web</string>
    <string name="photo_library">Photo Library</string>
    <string name="please_select_media">Please select media first</string>
    <string name="select_media">Select Media</string>
    <string name="camera">Camera</string>
    <string name="capture_media">Capture Media</string>
    <string name="adding">Adding &#8230;</string>
    <string name="photo">Photo</string>
    <string name="close">Close</string>
    <string name="one_drive">OneDrive</string>
    <string name="browse_one_drive">Browse OneDrive</string>
    <string name="downloading">Downloading &#8230;</string>
    <string name="download_pattern">%1$s out of %2$s</string>
    <string name="download_error">An error occurred while downloading files</string>
    <string name="email_app_select">Select Email Application</string>
    <string name="tell_prewritten_message">Checkout the apps by The PE Geek on the Google Play Store <a>https://play.google.com/store/apps/developer?id=The+PE+Geek&amp;hl=en</a></string>
    <string name="report_bug_template">Please describe steps to reproduce a bug:\n\n---------\nDevice: %1$s %2$s;\nOS Version: %3$s</string>
    <string name="canceled">Canceled</string>
    <string name="register_link">Not got an account? <b>Register</b></string>
    <string name="fill_fields">Please fill in fields below</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="free">Free</string>
    <string name="premium">Premium</string>
    <string name="create_user">Create User</string>
    <string name="creating_user">Creating user</string>
    <string name="question_mark">\?</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_confirm_password">Invalid confirm password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="subscriptions_not_supported">Subscriptions are not supported</string>
    <string name="query_inventory_error">Querying inventory failed: %1$s</string>
    <string name="purchasing_error">Purchasing failed: %1$s</string>
    <string name="developer_payload_verification_error">Invalid developer payload</string>
    <string name="loading_data">Loading data</string>
    <string name="max_classes_limit_reached">You have reached maximum limit of classes</string>
    
    <plurals name="daysCount">
        <item quantity="one">Required in %d Day</item>
        <item quantity="other">Required in %d Days</item>
    </plurals>
    
    <string-array name="menu_items">
        <item>@string/contact_us</item>
        <item>@string/visit_website</item>
        <item>@string/report_bug</item>
        <item>@string/tell_friend</item>
        <item>@string/logout</item>
    </string-array>
    
    <string-array name="days_of_week">
        <item></item>
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

</resources>