<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#458edb"
        android:padding="10dp"
        android:gravity="center">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info_icon" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/white"
            android:text="@string/information" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#2c2c2c"
	            android:gravity="center_horizontal"
	            android:text="@string/enter_class_name" />
	        
	        <EditText
	            android:id="@+id/classNameView"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:inputType="text"
	            android:maxLines="1"
	            android:hint="@string/class_name"
	            android:gravity="center_horizontal"
	            android:background="@drawable/edittext_background" />
        
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            
            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:textColor="@color/btn_text_color"
                android:background="@drawable/btn_left_background"
                android:text="@string/cancel" />              
            
            <Button
                android:id="@+id/addBtn"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginLeft="-1dp"
                android:textColor="@color/btn_text_color"
                android:background="@drawable/btn_right_background"
                android:text="@string/add" />
            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>