<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDropbox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2c2c2c"
        android:textStyle="bold"
        android:text="@string/dropbox" />
    
    <TextView
        android:id="@+id/dropboxText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/textview_background"
        android:padding="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:textColor="#aaaaaa"
        android:text="@string/select_file" />
    
    <Button
        android:id="@+id/dropboxBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:gravity="center_horizontal"
        android:background="@drawable/btn_background"
        android:drawableLeft="@drawable/icon_dropbox_black"
        android:drawablePadding="10dp"
        android:textColor="@color/btn_text_color"
        android:text="@string/browse_dropbox" />
    
</LinearLayout>
