<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutLink"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="invisible">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2c2c2c"
        android:textStyle="bold"
        android:text="@string/web_page_link" />
    
    <TextView
        android:id="@+id/linkText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/textview_background"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#aaaaaa"
        android:text="@string/select_file" />
    
    <Button
        android:id="@+id/linkBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:gravity="center_horizontal"
        android:background="@drawable/btn_background"
        android:drawableLeft="@drawable/icon_link_black"
        android:drawablePadding="10dp"
        android:textColor="@color/btn_text_color"
        android:text="@string/browse_web" />
    
</LinearLayout>
