<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutGallery"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="invisible">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2c2c2c"
        android:textStyle="bold"
        android:text="@string/photo_library" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        
    	<ImageView
    	    android:id="@+id/galleryImage"
    	    android:layout_width="90dp"
    	    android:layout_height="90dp"
    	    android:scaleType="centerInside"
    	    android:padding="1dp"
    	    android:background="@drawable/textview_background"
    	    android:src="@drawable/icon_gallery_black" />
    	
    	<LinearLayout 
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:layout_marginLeft="5dp"
    	    android:orientation="vertical">
    	    
    	    <TextView
    	        android:id="@+id/galleryText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/textview_background"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:gravity="center_horizontal"
		        android:textColor="#aaaaaa"
		        android:text="@string/please_select_media" />
		    
		    <Button
		        android:id="@+id/galleryBtn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:gravity="center_horizontal"
		        android:background="@drawable/btn_background"
		        android:textColor="@color/btn_text_color"
		        android:text="@string/select_media" />
    	    
    	</LinearLayout>
    
    </LinearLayout>
    
</LinearLayout>
