<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inner_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">
    
    <include layout="@layout/titlebar" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout 
            android:id="@+id/classesBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="15dp">
            
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#0c3b6f"
	            android:drawableLeft="@drawable/icon_classes"
	            android:drawablePadding="5dp"
	            android:textSize="18sp"
	            android:text="@string/classes" />
            
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/tasksBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f4f9fd"
            android:gravity="center"
            android:padding="15dp">
            
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#0c3b6f"
	            android:drawableLeft="@drawable/icon_tasks"
	            android:drawablePadding="5dp"
	            android:textSize="18sp"
	            android:text="@string/tasks" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        
        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
    </FrameLayout>
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:background="#8fbbe9">
        
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:background="#448edb"
	        android:padding="10dp"
	        android:gravity="center_horizontal">
	        
	     	<RadioGroup
	     	    android:id="@+id/timeSelectorGroup"
	     	    android:layout_width="wrap_content"
	     	    android:layout_height="wrap_content"
	     	    android:orientation="horizontal"
	     	    android:gravity="center_vertical"
	     	    android:background="@drawable/radoigroup_background">
	     	    
	     	    <RadioButton 
	     	        android:id="@+id/todayBtn"
	     	        android:layout_width="100dp"
	     	        android:layout_height="wrap_content"
	     	        android:text="@string/today"
	     	        android:gravity="center"
	     	        android:padding="7dp"
	     	        android:background="@drawable/rb_left_background"
	     	        android:textColor="@color/cb_text_color"
	     	        android:button="@null" />
	     	    
	     	    <RadioButton 
	     	        android:id="@+id/allBtn"
	     	        android:layout_width="100dp"
	     	        android:layout_height="wrap_content"
	     	        android:layout_marginLeft="-1dp"
	     	        android:text="@string/all"
	     	        android:gravity="center"
	     	        android:padding="7dp"
	     	        android:background="@drawable/rb_right_background"
	     	        android:textColor="@color/cb_text_color"
	     	        android:button="@null"
	     	        android:checked="true" />
	     	    
	     	</RadioGroup>
	        
	    </LinearLayout>
        
    </FrameLayout>

</LinearLayout>